--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,13 +6,13 @@
 </p>
 
 <p>
-  <strong>Gender:</strong>
-  <%= @movie.gender %>
+  <strong>Genre:</strong>
+  <%= @movie.genre %>
 </p>
 
 <p>
-  <strong>Times watched:</strong>
-  <%= @movie.times_watched %>
+  <strong>Watch Count:</strong>
+  <%= @movie.watch_count %>
 </p>
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
