--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,8 +6,8 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Gender</th>
-      <th>Times watched</th>
+      <th>Genre</th>
+      <th>Watch Count</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,8 +16,8 @@
     <% @movies.each do |movie| %>
       <tr>
         <td><%= movie.name %></td>
-        <td><%= movie.gender %></td>
-        <td><%= movie.times_watched %></td>
+        <td><%= movie.genre %></td>
+        <td><%= movie.watch_count %></td>
         <td><%= link_to 'Show', movie %></td>
         <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
         <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
