watch count chart added

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,7 +2,8 @@
 
 <h1>Movies</h1>
 
-<%= pie_chart(@data) %>
+<%= pie_chart(@movie_count_data) %>
+<%= pie_chart(@watch_count_data) %>
 
 <table>
   <thead>
