css for buttons added

--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form', movie: @movie %>
 
-<%= link_to 'Show', @movie %> |
-<%= link_to 'Back', movies_path %>
+<button class="btn btn-primary">
+  <%= link_to 'Back', movies_path %>
+</button>
