--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', movie: @movie %>
 
-<%= link_to 'Back', movies_path %>
+<button class="btn btn-primary">
+  <%= link_to 'Back', movies_path %>
+</button>
