--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,54 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
+ /*
+ *= require font-awesome
  *= require_tree .
  *= require_self
  */
+
+* {
+  text-decoration: none;
+}
+body {
+  font-family: -apple-system,
+              BlinkMacSystemFont,
+              "Segoe UI",
+              Roboto,
+              Helvetica,
+              Arial,
+              sans-serif,
+              "Apple Color Emoji",
+              "Segoe UI Emoji",
+              "Segoe UI Symbol";
+}
+a {
+  color: white;
+}
+.chart {
+  max-width: 500px;
+}
+.btn {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.btn-primary {
+  background-color: #008CBA;
+}
+.btn-primary:hover {
+  background-color: #2e6da4;
+}
+.btn-success {
+  background-color: #00a65a;
+}
+.btn-success:hover {
+  background-color: #008d4c;
+}
+.content {
+  display: none;
+  overflow: hidden;
+}
