--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,31 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Movies</h1>
+<h1><%= t('movie.title') %></h1>
 
 <header>
-  <button class="btn btn-lg btn-primary collapse">Movies count organized by genre</button>
+  <button class="btn btn-lg btn-primary collapse"><%= t('movie.count') %></button>
   <div class="chart content">
     <%= pie_chart(@movie_count_data) %>
   </div>
 
-  <button class="btn btn-lg btn-primary collapse">Watch count organized by genre</button>
+  <button class="btn btn-lg btn-primary collapse"><%= t('watch.count') %></button>
   <div class="chart content">
     <%= pie_chart(@watch_count_data) %>
   </div>
 </header>
 </br>
 
-<button class="btn btn-md btn-primary collapse">My movies</button>
+<button class="btn btn-md btn-primary collapse"><%= t('movie.my') %></button>
 <section class="container">
- <button class="btn btn-md btn-success"><%= link_to 'New Movie', new_movie_path %></button>
+ <button class="btn btn-md btn-success"><%= link_to t('movie.new'), new_movie_path %></button>
  </br>
  <table>
    <thead>
      <tr>
-       <th>Name</th>
-       <th>Genre</th>
-       <th>Watch Count</th>
-       <th colspan="3">Actions</th>
+       <th><%= t('movie.name') %></th>
+       <th><%= t('movie.genre') %></th>
+       <th><%= t('movie.watch_count') %></th>
+       <th colspan="3"><%= t('movie.actions') %></th>
      </tr>
    </thead>
 
